--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro Henrique Nazário Berigo</title>
     <link rel="shortcut icon" href="." type="imagens">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/card.css">
-    <link rel="stylesheet" href="css/texto.css">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="card.css">
+    <link rel="stylesheet" href="texto.css">
 </head>
 <body>
  <div id="conteudo">
@@ -22,18 +22,18 @@
     <div id="foto">
         <div id="dados">
             <h1>Pedro Henrique Nazário Berigo</h1>
-            <img src="imagens/eu.jpg"width="300px" alt="">
+            <img src="eu.jpg"width="300px" alt="">
             <p id="contado">
-                <a href="" id="whatsapp"><img src="imagens/whatsApp.jpg" alt="" width="20px">
+                <a href="" id="whatsapp"><img src="whatsApp.jpg" alt="" width="20px">
                  64996956778<br>
                  </a>
-                <a href="https://www.instagram.com/eoph_09" target="_blank" id="instagram"><img src="imagens/instagram.webp" alt="" width="20px"> @eoph_09<br></a>
+                <a href="https://www.instagram.com/eoph_09" target="_blank" id="instagram"><img src="instagram.webp" alt="" width="20px"> @eoph_09<br></a>
                 <a href="https://www.github.com/Pedro Henrique" target="_blank" id="github">
-                    <img src="imagens/github.webp" alt="" width="20px">
+                    <img src="github.webp" alt="" width="20px">
                   github Pedro Henrique 
                 </a><br>
                 <a href="mailto:pedrohenriquenazárioberigo@gmail.com">
-                    <img src="imagens/gmail-icon-free-png.webp" alt="" width="20px">  
+                    <img src="gmail-icon-free-png.webp" alt="" width="20px">  
                     pedrohenriquenazárioberigo@gmail.com 
                 </a><br>
                 endereço parque jatobas rua j quadra 21 lote 22
